--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Chocolate Chip Cookies</h1>
+        <img src="../images/chocolate-chip-cookies.jpg" alt="Delicious chocolate chip cookies">
     </body>
 
 </html>
