Add description and ingredients

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -8,6 +8,26 @@
     <body>
         <h1>Chocolate Chip Cookies</h1>
         <img src="../images/chocolate-chip-cookies.jpg" alt="Delicious chocolate chip cookies">
+        
+        <h2>Description</h2>
+        <p>These amazing bakery style chocolate chip cookies are to die for! 
+            They are super easy to bake with ingredients that you can easily find in your home grocery store.
+            Follow along and let me know what your thoughts are!
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>3 cups of all-purpose flour</li>
+            <li>1 teaspoon baking soda</li>
+            <li>1 teaspoon fine sea salt</li>
+            <li>2 sticks unsalted butter, at cool room temperature</li>
+            <li>1/2 cup granulated sugar</li>
+            <li>1 1/4 cups lightly packed light brown sugar</li>
+            <li>2 teaspoons vanilla</li>
+            <li>2 large eggs, at room temperature</li>
+            <li>2 cups semisweet chocolate chips</li>
+        </ul>
+        
     </body>
+
 
 </html>
