Edit description paragraph and add steps

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -10,10 +10,9 @@
         <img src="../images/chocolate-chip-cookies.jpg" alt="Delicious chocolate chip cookies">
         
         <h2>Description</h2>
-        <p>These amazing bakery style chocolate chip cookies are to die for! 
-            They are super easy to bake with ingredients that you can easily find in your home grocery store.
-            Follow along and let me know what your thoughts are!
-        </p>
+        <p>These amazing bakery style chocolate chip cookies are to die for! </p>
+            <p>They are super easy to bake with ingredients that you can easily find in your home grocery store.</p>
+            <p>Follow along and let me know what your thoughts are!</p>
         <h3>Ingredients</h3>
         <ul>
             <li>3 cups of all-purpose flour</li>
@@ -26,7 +25,17 @@
             <li>2 large eggs, at room temperature</li>
             <li>2 cups semisweet chocolate chips</li>
         </ul>
-        
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat oven to 350 F. Line baking sheets with parchment paper.</li>
+            <li>In a medium bowl, combine the flour, baking soda, and salt.</li>
+            <li>In the bowl of an electric mixer, beat the butter, granulated sugar, and brown sugar until creamy, about 2 minutes. Add the vanilla and eggs. Gradually beat in the flour mixture. Stir in the chocolate chips.</li>
+            <li>If time permits, wrap dough in plastic wrap and refrigerate for at least 24 hours but no more than 72 hours.</li>
+            <li>Let dough sit at room temperature until soft enough to scoop.</li>
+            <li>Divide dough into 3 table-spoon sized balls using a large cookie scoop and drop onto prepared baking sheets.</li>
+            <li>Bake for 11-13 minutes, or unitl golden brown. Cool for 5 minutes before removing to wire racks to cool completely.</li>
+            <li>The cookies can be stored in an airtight container for up to 3 days.</li>
+        </ol>
     </body>
 
 
