--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
+        <a href="recipes/chocolate-croissants.html">Chocolate Croissants</a>
     </body>
 </html>
