Add description, ingredients, steps to chocolate croissants

--- a/recipes/chocolate-croissants.html
+++ b/recipes/chocolate-croissants.html
@@ -7,5 +7,68 @@
     <body>
         <h1>Chocolate Croissants</h1>
         <img src="../images/chocolate-croissants.jpg">
+        <h2>Description</h2>
+        <p>Warm, buttery, and flaky. Everything you are wanting in one of these decadent chocolate croissants. They taste like you just sat down at your favorite pattiserie in Paris on a beautiful spring day.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li><strong>Dough:</strong></li>
+            <li>1/2 cup warm water (100 degrees F or 38 degrees C)</li>
+            <li>1/2 (0.25 ounce) package active dry yeast</li>
+            <li>2 tablespoons granulated white sugar</li>
+            <li>1 3/4 cups unbleached bread flour</li>
+            <li>1 1/2 teaspoons kosher salt</li>
+            <li>3 tablespoons butter, room temperature, cut into pieces</li>
+            <li><strong>Croissants:</strong></li>
+            <li>1 stick unsalted European-style butter</li>
+            <li>1 cup chopped bittersweet chocolate</li>
+            <li>1 egg</li>
+            <li>1 tablespoon water</li>
+            <li>1 pinch coarse sea salt to taste</li>
+        </ul>
+        <h3>Directions:</h3>
+        <ol>
+            <li>Place warm water in a bowl of a stand mixer. Sprinkle with yeast. Let yeast dissolve for 10 minutes. Add sufar and breadflour.
+                Sprinkle with salt; add 3 tablespoons butter. Attach the bowl to the stand mixer. Mix dough with the dough hook just until butter
+                is completely kneaded in and the dough forms a ball and pulls away cleanly from the sides of the bowl, 3 or 4 minutes.
+            </li>
+            <li>Transfer dough to a work surface and form into a semi-smooth ball. Place dough back in the mixer bowl; cover. Let rise in a warm spot
+                until doubles, about 2 hours.
+            </li>
+            <li>Transfer dough to a lightly floured work surface. Push and press dough to deflate it, and form it into a rectangle. Fold into thirds
+                by lifting one end over the middle third, and folding the other side onto the middle. Wrap in plastic wrap. Place on rimmed baking sheet
+                lined witha  silicone mat. Refrigerate until chilled through, about 1 hour. 
+            </li>
+            <li>Cut 1 stick of butter in 1/2 lengthwise and place halves slightly apart from each other on a length of parchment paper long enough to
+                fold over the butter. Fold the parchment paper over the butter. Press  butter down. Roll out with a rolling pin to a square about 8x8 inches.
+                Refrigerate until a little chilled and just barely flexible, 10 or 15 minutes.
+            </li>
+            <li>Roll dough out into a rectangle slightly wider than the butter slab and just over twice as long. Place butter on one half of the dough leaving
+                about 1 inch margin from the edge of the dough. Fold the other half of the dough over the butter. Dust work surface and dough with flour
+                as needed.
+            </li>
+            <li>Press rolling pin down on dough to create ridges. Then roll out the ridges. Repeat this process. Keep pressing and rolling until dough is about
+                the same size rectangle as you had before you folded it in half, dusting with just a bit of flour as necessary.
+            </li>
+            <li>Starting from the short side, fold one-third of dough over middle third. Then fold the other end over to form a small rectangle. Flatten out just
+                slightly with rolling pin. Transfer to the silicone-lined baking sheet; cover with plastic wrap. Refrigerate until chilled, about 30 minutes.
+            </li>
+            <li>Transfer dough back to work surgace and repeat pressing and rolling technique until dough is the size of the previous larger rectangle. Fold into
+                thirds again, starting from the short side. Press and roll slightly. Transfer back to lined baking sheet. Cover and refrigerate about 15 minutes.
+            </li>
+            <li>Roll back out to a large rectangle. This time, fold dough in half. Then press and roll out into a 1/2-inch thick rectangle, using as little flour
+                as needed to keep dough from sticking.
+            </li>
+            <li>Dust dough with flour and roll out to a rectangle about 1/8-inch thick. Cut dough lengthwise into 6 pieces using a pastry wheel.</li>
+            <li>Pull and stretch out 1 of the dough pieces until ends are slightly tapered. Line 1 to 2 tablespoons of chocolate 1 inch parallel to the bottom edge
+                and an equal amount of chocolate 1 more inch ahead. Roll dough up over the chocolate toward the top short edge to form a croissant with the seam
+                at the bottom. Repeat with the remaining 5 dough pieces.
+            </li>
+            <li>Place shaped croissants on baking sheets lined with silicone mats. Whisk together egg and 1 tablespoon water to make the egg wash. Brush croissants
+                with a large portion of the egg wash. PLace in a warm area to allow the m to rise, 60 to 90 minutes.
+            </li>
+            <li>Preheat oven to 400 degrees F (200 degrees C). Brush croissants gently but thoroughly again with egg wash. Sprinkle sea salt on top.</li>
+            <li>Bake in preheated oven until beautifully browned, about 25 minutes. Transfer to a cooling rack. Cool to room temperature, about 1 hour.</li>
+        </ol>
     </body>
 </html>
