Add swedish cardamom buns to odin-recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
         <a href="recipes/chocolate-croissants.html">Chocolate Croissants</a>
+        <a href="recipes/cardamom-buns.html">Swedish Cardamom Buns</a>
     </body>
 </html>
