Add Cardamom Buns recipe details

--- a/recipes/chocolate-croissants.html
+++ b/recipes/chocolate-croissants.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Chocolate Croissants</h1>
-        <img src="../images/chocolate-croissants.jpg">
+        <img src="../images/chocolate-croissants.jpg" alt="Melty chocolate croissants">
         <h2>Description</h2>
         <p>Warm, buttery, and flaky. Everything you are wanting in one of these decadent chocolate croissants. They taste like you just sat down at your favorite pattiserie in Paris on a beautiful spring day.</p>
 
